# meatreader-esp

./: .editorconfig  .gitignore  CLAUDE.md  README.md  TODO.md  agentkit.json  build-all.sh  package-lock.json  package.json
agentkit-adapters/: meatreader_adapter.py
firmware/: .clangd  .envrc  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/clangd_stubs/machine/: endian.h
firmware/components/ads1115/: CMakeLists.txt  ads1115.c
firmware/components/ads1115/include/: ads1115.h
firmware/components/alert_mgr/: CMakeLists.txt  alert_mgr.c
firmware/components/alert_mgr/include/: alert_mgr.h
firmware/components/board/: CMakeLists.txt  board.c
firmware/components/board/include/: board.h
firmware/components/calibration/: CMakeLists.txt  calibration.c
firmware/components/calibration/include/: calibration.h
firmware/components/config_mgr/: CMakeLists.txt  config_mgr.c
firmware/components/config_mgr/include/: config_mgr.h
firmware/components/http_server/: CMakeLists.txt  http_server.c  http_util.h  routes_alerts.c  routes_calibration.c  routes_config.c  routes_dashboard.c  routes_events.c  routes_metrics.c  routes_ota.c  routes_ota.h  routes_profiles.c  routes_provision.c  routes_push.c  routes_static.c  routes_status.c  routes_temps.c
firmware/components/http_server/include/: http_server.h  routes_static.h
firmware/components/i2c_manager/: CMakeLists.txt  i2c_manager.c
firmware/components/i2c_manager/include/: i2c_manager.h
firmware/components/ref_sensor/: CMakeLists.txt  ds18b20.c  idf_component.yml
firmware/components/ref_sensor/include/: ref_sensor.h
firmware/components/sensor_mgr/: CMakeLists.txt  sensor_mgr.c
firmware/components/sensor_mgr/include/: sensor_mgr.h
firmware/components/storage/: CMakeLists.txt  storage.c
firmware/components/storage/include/: storage.h
firmware/components/therm_math/: CMakeLists.txt  therm_math.c
firmware/components/therm_math/include/: therm_math.h
firmware/components/wifi_mgr/: CMakeLists.txt  wifi_mgr.c
firmware/components/wifi_mgr/include/: wifi_mgr.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/tests/: CMakeLists.txt
firmware/tests/therm_math/: CMakeLists.txt  test_therm_math.c
mobile-app/: App.tsx  app.json  package.json
mobile-app/app/(tabs)/: _layout.tsx  alerts.tsx  chart.tsx  dashboard.tsx  devices.tsx  profiles.tsx
mobile-app/src/api/: client.ts  usePolling.ts
mobile-app/src/store/: device.ts
scripts/: codex-startup.sh
thermometer-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
thermometer-ui/public/: manifest.webmanifest
thermometer-ui/src/: App.svelte  app.css  sw.ts
thermometer-ui/src/lib/: sw-bridge.ts  vapid.ts
thermometer-ui/src/lib/api/: client.ts  live.ts  types.test.ts  types.ts
thermometer-ui/src/lib/components/common/: QualityBadge.svelte
thermometer-ui/src/lib/components/dashboard/: ChannelCard.svelte  ChartModal.svelte  Sparkline.svelte
thermometer-ui/src/lib/stores/: alertWatcher.svelte.ts  calibration.svelte.ts  config.svelte.ts  consoleLog.svelte.ts  cookStore.svelte.ts  device.svelte.ts  predictions.svelte.ts  profileStore.svelte.ts  temps.svelte.ts  ui.svelte.ts
thermometer-ui/src/lib/utils/: format.test.ts  format.ts
thermometer-ui/src/views/: Calibration.svelte  Config.svelte  Console.svelte  Dashboard.svelte  Diagnostics.svelte  Firmware.svelte  Profiles.svelte
