idf_component_register(
    SRCS
        "http_server.c"
        "routes_temps.c"
        "routes_config.c"
        "routes_calibration.c"
        "routes_status.c"
        "routes_metrics.c"
        "routes_provision.c"
        "routes_alerts.c"
        "routes_events.c"
        "routes_profiles.c"
        "routes_push.c"
        "routes_ota.c"
    INCLUDE_DIRS "include"
    REQUIRES
        esp_http_server
        esp_http_client
        json
        sensor_mgr
        config_mgr
        calibration
        alert_mgr
        ref_sensor
        esp_timer
        esp_wifi
        nvs_flash
        app_update
        freertos
)
